making sure my updates make it here as I am about changes to the IRPG code
making it into that ChangeLog, so there may be changes between versions that you
don't see listed here.

Also, please note that any use of "incowrect" or other cow-related "typos" are
NOT typos. I like cattle. A lot. Please stop fixing them :^)

2004-05-23  Jon Honeycutt  <jotun@idlerpg.net>
    * changed most everything to make sense with the new database
    * edited dump.php to display data in the same format, despite the new
      database format. 
    * added an xml.php page that takes a 'player' argument and displays
      information on that user in xml 1.0 format. should allow a better API
      as far as compatibility with newer dbs goes
    * changed playerview.php to use fgets() to read from modifiers.txt.
      hopefully this is much faster
    * edited playerview.php to show map and XML data link
    * changed the counter in footer.php to strip the leading path information
      from $_SERVER['PHP_SELF'] before using it to identify the page
    * removed some unused $i variable from players.php
    * created quest.php which shows active quest info
    * created makequestmap.php which draws a quest map if quest type is 2,
      redirects otherwise
    * created worldmap.php which shows the active state of the irpg world
    * created makeworldmap.php which draws the world map
    * created makemap.php which takes a 'player' argument and draws them on the
      map
    * commonfunctions.php now has functions to sort by isadmin flag and player
      alignment
    * index.php updated with information on the new game features
    * changed titles on several pages to use $irpg_chan instead of hard-coded
      #G7
    * updated header.php to link to new pages and idlerpg.net forum
    * changed 'time modifiers' to 'character modifiers' as item modifiers are
      now stored, also
2004-05-23  Alexander Hirzel  <chewie@f2o.org>