@@ -3,22 +3,23 @@
     $file = fopen($irpg_db,"r");
     fgets($file);
 
-    session_start(); // sessions to generate only one map / person / minute
-    if (time()-$_SESSION['time'] < 60) {
+    session_start(); // sessions to generate only one map / person / 20s
+    if (time()-$_SESSION['time'] < 20) {
         header("Location: maperror.png");
         exit(0);
     }
     $_SESSION['time']=time();
 
     header("Content-type: img/png");
-    $map = imageCreateFromPNG("newmap.png");
+    $map = imageCreate(500,500);
+    $magenta = ImageColorAllocate($map, 255, 0, 255);
     $blue = imageColorAllocate($map, 0, 128, 255);
     $red = imageColorAllocate($map, 211, 0, 0);
-
-	while ($line=fgets($file)) {
-		list(,,,,,,,,$online,,$x,$y) = explode("\t",trim($line));
-		if ($online == 1) imageFilledEllipse($map, $x, $y, 3, 3, $blue);
-		else imageFilledEllipse($map, $x, $y, 3, 3, $red);
+    ImageColorTransparent($map, $magenta);
+    while ($line=fgets($file)) {
+        list(,,,,,,,,$online,,$x,$y) = explode("\t",trim($line));
+        if ($online == 1) imageFilledEllipse($map, $x, $y, 3, 3, $blue);
+        else imageFilledEllipse($map, $x, $y, 3, 3, $red);
     }
     header("Content-type: image/png");
     imagePNG($map);
